argocd/keycloak/manifests/04_postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: keycloak
spec:
  ports:
  - port: 5432
    name: postgres
  selector:
    app.kubernetes.io/name: keycloak-postgres
    app.kubernetes.io/instance: keycloak-postgres
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: keycloak
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak-postgres
      app.kubernetes.io/instance: keycloak-postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak-postgres
        app.kubernetes.io/instance: keycloak-postgres
    spec:
      serviceAccountName: keycloak
      containers:
        - name: postgres
          image: postgres:16.0
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-pv-claim
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: vault
          secret:
            secretName: vault
  volumeClaimTemplates:
    - metadata:
        name: postgres-pv-claim
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
