argocd/keycloak/manifests/04_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.pathmatcher: block-metrics-ingress-external@kubernetescrd
spec:
  rules:
    - host: sso.adminafk.fr
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
  tls:
    - hosts:
        - sso.adminafk.fr
      secretName: sso.adminafk.fr-tls
  ingressClassName: ingress-external
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin
  annotations:
    cert-manager.io/cluster-issuer: vault
    cert-manager.io/private-key-algorithm: "RSA"
    cert-manager.io/private-key-size: "4096"
    traefik.ingress.kubernetes.io/router.pathmatcher: block-metrics-ingress-internal@kubernetescrd
spec:
  rules:
    - host: sso.unicornafk.fr
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
  tls:
    - hosts:
        - sso.unicornafk.fr
      secretName: sso.unicornafk.fr-tls
  ingressClassName: ingress-internal
