argocd/keycloak/manifests/07_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-external
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: sso.adminafk.fr
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
  tls:
    - hosts:
        - sso.adminafk.fr
      secretName: sso.adminafk.fr-tls
  ingressClassName: ingress-external
